force-app/main/default/objects/Clayton_OAuth__mdt/Clayton_OAuth__mdt.object-meta.xml
<CustomObject>
    <label>Clayton OAuth</label>
    <pluralLabel>Clayton OAuths</pluralLabel>
</CustomObject>