force-app/main/default/objects/Clayton_OAuth__mdt/fields/AuthorizeUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeUrl__c</fullName>
    <inlineHelpText>OAuth2 Authorize URL. 
By default set to https://app.clayton.io/oauth2/authorize</inlineHelpText>
    <label>Authorize Endpoint URL</label>
    <type>Url</type>
</CustomField>