force-app/main/default/objects/Clayton_OAuth__mdt/fields/CallbackUrl__c.field-meta.xml
<CustomField>
    <fullName>CallbackUrl__c</fullName>
    <inlineHelpText>OAuth2 Callback URL. 
By default set to https://{ORG}/services/authcallback/{PROVIDER_NAME}</inlineHelpText>
    <label>Callback Endpoint URL</label>
    <type>Url</type>
</CustomField>