force-app/main/default/objects/Clayton_OAuth__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>