force-app/main/default/objects/Clayton_OAuth__mdt/fields/TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenUrl__c</fullName>
    <inlineHelpText>OAuth2 Token URL. 
By default set to https://app.clayton.io/oauth2/token</inlineHelpText>
    <label>Token Endpoint URL</label>
    <type>Url</type>
</CustomField>